fixing layout, overflow-y

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ html{
 body{
      font-family: 'Segoe UI', sans-serif;
      color: #2e2e2e;
-     width: 99vw;
+     max-width: 99vw;
      height: 100vh;
      margin: 0;
      padding: 0;
@@ -55,7 +55,7 @@ nav ul a{
 
 /* Home Page Section */
 
-.home-page{
+.home-page, .home-search{
      width: 100%;
      height: 100vh;
 }
@@ -132,6 +132,8 @@ nav ul a{
      }
 }
 
+/*  */
+
 .home-page .home-details-bg{
      width: 80%;
      height: 80vh;
@@ -166,9 +168,17 @@ nav ul a{
      color: #e86600;
 }
 
-.home-search{
-     width: 100%;
-     height: 100vh;
+/* Home search Section */
+
+.home-search .only-for-bg{
+     width: 80%;
+     height: 80%;
+     border-radius: 2rem;
+     margin: auto;
+     /* display: flex;
+     align-items: first baseline;
+     justify-content: flex-end;
+     background: linear-gradient(to left, #ff7a00 0%, rgba(255, 122, 0, 0) 100%); */
      background-image: url(./images/meal-plate-horizontal-cropped.jpg);
      background-position: center;
      background-size: cover;
@@ -180,15 +190,6 @@ nav ul a{
      color: #fff;
      font-weight: bolder;
      font-size: 2rem;
-}
-
-.home-search .only-for-bg{
-     width: 100%;
-     height: 100%;
-     display: flex;
-     align-items: first baseline;
-     justify-content: flex-end;
-     background: linear-gradient(to left, #ff7a00 0%, rgba(255, 122, 0, 0) 100%);
 }
 
 .home-search .home-search-flex-div{
@@ -288,12 +289,13 @@ button{
      display: flex;
      flex-wrap: wrap;
      justify-content: space-around;
+     margin: 0 auto;
 }
 
 .show-meal {
-  width: 350px;
-  max-width: 400px;
-  margin: 1rem;
+  width: 300px;
+  max-width: 350px;
+  margin: 1rem auto ;
   border: 2px solid red;
   /* display: flex;
   flex-direction: column; */
